--- a/lab/cloudChronicles_Lab001_Disaster_Recovery_Detective.ipynb
+++ b/lab/cloudChronicles_Lab001_Disaster_Recovery_Detective.ipynb
@@ -25,7 +25,7 @@
       "source": [
         "# Let's begin by printing your name to personalize the notebook\n",
         "your_name = \"\"\n",
-        "print(f\"Welcome to the lab, {your_name}!\")"
+        "print(f\"Welcome to the lab, {Tyler_Gutzmore}!\")"
       ]
     },
     {
